# Flappy-Bird-Cpp

./: Bird.py  CMakeLists.txt  Ground.py  Pipes.py  README.md  flapper.cpp  main.py
C/: CMakeLists.txt  Flappy.c
Cpp/: CMakeLists.txt  flapper.cpp
Python/: Score.py  Sky.py
